# confit-example

./: Cargo.toml
confit--does-not-work/: Cargo.toml
confit--does-not-work/src/: lib.rs
confit-lib-a/: Cargo.toml
confit-lib-a/src/: lib.rs
confit-lib-b/: Cargo.toml
confit-lib-b/src/: lib.rs
lib-a/: Cargo.toml
lib-a/confit/src/: lib.rs
lib-a/src/: lib.rs
lib-b/: Cargo.toml
lib-b/confit/src/: lib.rs
lib-b/src/: lib.rs
src/: main.rs
