[package]
name = "confit-example"
version = "0.1.0"
authors = ["Nicolas Stalder <n@stalder.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib-a = { path = "lib-a" }
lib-b = { path = "lib-b" }
# confit-lib-a = { path = "confit-override", package = "confit-override" }

[patch."file:///home/nicolas/projects/confit-example/lib-a/confit"]
confit-lib-a = { path = "confit-lib-a" }

# [patch."file:///home/nicolas/projects/confit-example/lib-a/confit-lib-a"]
# confit-lib-a = { path = "confit-lib-a" }
# confit-lib-a = { path = "confit", package = "confit" }

[patch."file:///home/nicolas/projects/confit-example/lib-b/confit"]
confit-lib-b = { path = "confit-lib-b" }
